added images and about me

--- a/index.html
+++ b/index.html
@@ -45,19 +45,17 @@
         </ion-item> -->
 
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus dictum magna sit amet purus maximus sodales. Phasellus luctus lobortis tellus ut bibendum. Vivamus sodales rhoncus sagittis. Sed at aliquam metus. Aliquam erat volutpat. Nullam vitae purus
-            enim. Ut et eros ut mauris blandit pellentesque. Duis sit amet arcu hendrerit, efficitur nisl sed, tempus lectus. Praesent tincidunt nibh diam, et sagittis diam malesuada sit amet. Fusce viverra ipsum nec urna commodo, et facilisis ligula
-            euismod. Duis vehicula sapien in magna pharetra, at iaculis ex condimentum. Nullam pretium laoreet sapien nec tincidunt. Nunc feugiat fringilla dui. Mauris pretium quis tortor quis ultrices. Integer egestas posuere fringilla. Fusce eleifend
-            ligula accumsan aliquet fermentum. Morbi non magna a ex sodales ultricies rutrum eget sem. Praesent a magna eget libero rhoncus malesuada pellentesque sed est. Proin semper aliquet efficitur. Vivamus tincidunt venenatis quam vestibulum dignissim.
-            Praesent at libero ultricies, tempus dolor ut, malesuada mi. Nunc justo lorem, dignissim non lacus non, luctus pharetra diam. Mauris pretium ipsum iaculis, tristique nunc non, mollis dui. In sit amet faucibus sapien. Morbi ut dui molestie,
-            viverra enim ornare, pellentesque nulla. Donec a lacinia est. Pellentesque imperdiet, mauris a lacinia egestas, turpis ex iaculis ex, sit amet feugiat urna quam sed velit. Phasellus ac turpis libero. Nullam diam est, iaculis vitae sem sit
-            amet, venenatis porta est. Ut interdum, tortor vel dignissim dictum, velit turpis varius nunc, congue sagittis risus odio a turpis. Vivamus eleifend sapien enim, ac ultrices eros maximus et. Phasellus vehicula metus eros, vitae facilisis libero
-            rutrum nec. Praesent dignissim dui id tincidunt vehicula. Nulla non orci neque. Proin sodales, orci vitae bibendum ultrices, ligula nunc egestas nulla, nec malesuada quam urna at nisi. Phasellus mi sem, cursus ut lectus in, hendrerit egestas
-            magna. Aenean non facilisis massa. Maecenas a lacus est. Ut consectetur mollis velit, at maximus nisi sagittis ut. Suspendisse potenti. Phasellus fringilla lectus eu risus vehicula, vel laoreet leo euismod. Aenean condimentum tempor mi, id
-            cursus nisl ultricies vel. Fusce laoreet volutpat erat vitae sollicitudin. Mauris nibh quam, pharetra ut ultricies et, finibus ac erat. Sed sed tincidunt est, non rhoncus arcu. Phasellus commodo nisi eu sapien luctus, sit amet blandit lorem
-            porta. Praesent varius fermentum ante, ut congue turpis facilisis nec. Maecenas varius, augue vitae fermentum rutrum, est nulla ornare dolor, ut ultrices dui dolor eu risus. Maecenas hendrerit nisi non pellentesque posuere. Nam nisl dolor,
-            posuere a dolor vitae, euismod pretium urna. Aenean ipsum nisl, lacinia ac volutpat quis, pretium dignissim magna. Suspendisse ullamcorper, orci vitae pulvinar rutrum, tortor ex dapibus est, nec commodo ex ligula a odio. Etiam ut enim lectus.
-            Pellentesque porta non neque eu interdum. Phasellus lacinia libero dui, vestibulum placerat massa vestibulum id. Aliquam vitae diam nisl. Duis a sollicitudin odio, in congue diam. Ut pharetra velit ac felis congue, in semper lectus dapibus.
+            The first game I ever beat was The Legend Of Zelda: Ocarina of Time. I was maybe 3 or 4 at the time, messing around with my mother’s N64, trying to figure out how I get from Kakariko village at the start of the game to Death Mountain which I had seen on a another save. Since I couldn’t read at the time, much less in English, I asked my mom for help translating what people were saying. We ended up playing through the entire game together from start to finish, me on the controller, her with a guide on hand, telling me how to get the Biggoron’s sword or trying to coach me through the forest dungeon which absolutely terrified little me with its ghosts and creepy ceiling hands.
+		 </p>
+		 <p>
+			In fact a lot of the time I spent with my family when I was younger was centered around various storytelling media. Every week we would rent several movies at a nearby blockbuster and watch them together and I’d spend many a summer with my cousins trying to beat a new game. It’s only natural I grew up so fascinated with storytelling.
+		</p>
+		<p>
+			I’d spend many a sleepless hours lying in bed thinking about games. How and why they worked, what I was going to do next, mulling over what I liked or not and why. I wanted to play all of them, see all there was to see, have every new experience I could. 
+		</p>
+		<p>
+			That time I spent with my mother playing Zelda was probably my most cherished memory. Looking back, its likely the reason I would inevitably gravitate towards game dev. I want to be able to create those experiences for other people, to share with them at least a little of something of what was so special to me.
+
         </p>
 
 
@@ -86,23 +84,31 @@
                         <!-- Wrapper for slides -->
                         <div class="carousel-inner">
 
-                            <div class="item active">
+                            <!-- <div class="item active">
                                 <iframe src="https://www.youtube.com/embed/8UmsfXWzvEA" title="Trailer" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                            </div>
-
-                            <div class="item">
-                                <img src="assets/img/1692.jpg" alt="Chicago">
+                            </div> -->
+							
+	                        <div class="item active">
+                                <img src="assets/img/FZ_Dialog.jpeg" alt="" style="width:100%;">
                                 <div class="carousel-caption">
-                                    <h3>Chicago</h3>
-                                    <p>Thank you, Chicago!</p>
+                                    <h3></h3>
+                                    <p></p>
                                 </div>
                             </div>
 
                             <div class="item">
-                                <img src="assets/img/169.png" alt="New York" style="width:100%;">
+                                <img src="assets/img/FZ_Town.png" alt="" style="width:100%;">
                                 <div class="carousel-caption">
-                                    <h3>New York</h3>
-                                    <p>We love the Big Apple!</p>
+                                    <h3></h3>
+                                    <p></p>
+                                </div>
+                            </div>
+
+                            <div class="item">
+                                <img src="assets/img/FZ_Combat.png" alt="" style="width:100%;">
+                                <div class="carousel-caption">
+                                    <h3></h3>
+                                    <p></p>
                                 </div>
                             </div>
 
@@ -252,35 +258,36 @@
                         <ol class="carousel-indicators">
                             <li data-target="#neon" data-slide-to="0" class="active"></li>
                             <li data-target="#neon" data-slide-to="1"></li>
-                            <li data-target="#neon" data-slide-to="2"></li>
+                            <!--<li data-target="#neon" data-slide-to="2"></li>-->
                         </ol>
 
                         <!-- Wrapper for slides -->
                         <div class="carousel-inner">
 
                             <div class="item active">
-                                <img src="assets/img/169.png" alt="Los Angeles" style="width:100%;">
+                                <img src="assets/img/NP_SpecSheet.png" alt="" style="width:100%;">
                                 <div class="carousel-caption">
-                                    <h3>Los Angeles</h3>
-                                    <p>LA is always so much fun!</p>
+                                    <h3></h3>
+                                    <p></p>
                                 </div>
                             </div>
 
                             <div class="item">
-                                <img src="assets/img/1692.jpg" alt="Chicago" style="width:100%;">
+                                <img src="assets/img/NP_Gameplay.png" alt="" style="width:100%;">
                                 <div class="carousel-caption">
-                                    <h3>Chicago</h3>
-                                    <p>Thank you, Chicago!</p>
+                                    <h3></h3>
+                                    <p></p>
                                 </div>
                             </div>
 
-                            <div class="item">
-                                <img src="assets/img/169.png" alt="New York" style="width:100%;">
+                            <!-- <div class="item">
+                                <img src="assets/img/169.png" alt="" style="width:100%;">
                                 <div class="carousel-caption">
-                                    <h3>New York</h3>
-                                    <p>We love the Big Apple!</p>
+                                    <h3></h3>
+                                    <p></p>
                                 </div>
                             </div>
+							-->
 
                         </div>
 
@@ -378,7 +385,7 @@
                         <div class="carousel-inner">
 
                             <div class="item active">
-                                <img src="assets/img/FDV_Title.png" alt="Los Angeles" style="width:100%;">
+                                <img src="assets/img/FDV_Title.png" alt="" style="width:100%;">
                                 <!--<div class="carousel-caption">
                                     <h3>Los Angeles</h3>
                                     <p>LA is always so much fun!</p>
@@ -386,7 +393,7 @@
                             </div>
 
                             <div class="item">
-                                <img src="assets/img/FDV_GPB.png" alt="Chicago" style="width:100%;">
+                                <img src="assets/img/FDV_GPB.png" alt="" style="width:100%;">
                                 <!--<div class="carousel-caption">
                                     <h3>Chicago</h3>
                                     <p>Thank you, Chicago!</p>
@@ -394,7 +401,7 @@
                             </div>
 
                             <div class="item">
-                                <img src="assets/img/FDV_GP.png" alt="New York" style="width:100%;">
+                                <img src="assets/img/FDV_GP.png" alt="" style="width:100%;">
                                 <!--<div class="carousel-caption">
                                     <h3>New York</h3>
                                     <p>We love the Big Apple!</p>
