--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             The first game I ever beat was The Legend Of Zelda: Ocarina of Time. I was maybe 3 or 4 at the time, messing around with my mother’s N64, trying to figure out how I get from Kakariko village at the start of the game to Death Mountain which I had seen on a another save. Since I couldn’t read at the time, much less in English, I asked my mom for help translating what people were saying. We ended up playing through the entire game together from start to finish, me on the controller, her with a guide on hand, telling me how to get the Biggoron’s sword or trying to coach me through the forest dungeon which absolutely terrified little me with its ghosts and creepy ceiling hands.
 		 </p>
 		 <p>
-			In fact a lot of the time I spent with my family when I was younger was centered around various storytelling media. Every week we would rent several movies at a nearby blockbuster and watch them together and I’d spend many a summer with my cousins trying to beat a new game. It’s only natural I grew up so fascinated with storytelling.
+			In fact a lot of the time I spent with my family when I was younger was centered around various media. Every week we would rent several movies at a nearby blockbuster and watch them together and I’d spend many a summer with my cousins trying to beat a new game. It’s only natural I grew up so fascinated with storytelling.
 		</p>
 		<p>
 			I’d spend many a sleepless hours lying in bed thinking about games. How and why they worked, what I was going to do next, mulling over what I liked or not and why. I wanted to play all of them, see all there was to see, have every new experience I could. 
