updated to include line breaks and changed text slightly

--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
     </header>
     <!-- <i class="titleIcon material-icons">person_outline</i> -->
 
+	
+	     <hr class="hr4">
+
     <div id="about-me" class="section">
         <h1 class="title">
             About me
@@ -60,11 +63,14 @@
 
 
     </div>
+	     <hr class="hr4">
+
 
     <div id="projects" class="section">
         <h1 class="title">
             Projects
         </h1>
+		
 
         <div class="project">
             <a href="https://drive.google.com/drive/folders/1ofAeOkL-20U9iZ9-0_Zw-V2JP5xcfawR?usp=sharing">
@@ -233,10 +239,7 @@
                                 </li>
                                 <br>
                                 <li>
-                                    The artists working with us had little to no knowledge of game dev and their course had different grading priorities than ours. It was a bit of a struggle to build a common vocabulary and to prioritize the project versus their (and our) other classes
-                                    and assignments that would also take the game into account. Notably, it was tricky to deal with ingrained conventions such as health being red and energy being blue when sometimes their art had them the other way around
-                                    (which inevitably confused our play testers). We eventually settled into a good working rhythm and managed to overcome enough of our communication issues to get a lot of work done. We even kept in touch afterwards,
-                                    so we must have done something right!
+									It was the first time the artists on our team ever worked on a game and their course had different grading priorities than ours. It was a bit of a struggle to build a common vocabulary and to prioritize the project versus their (and our) other classes and assignments that would also take the game into account. Notably, it was tricky to deal with ingrained conventions such as health being red and energy being blue when sometimes their art had them the other way around (which inevitably confused our play testers). We eventually settled into a good working rhythm and managed to overcome enough of our communication issues to get a lot of work done. We even kept in touch afterwards.
                                 </li>
                             </ul>
                         </div>
