--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 			In fact a lot of the time I spent with my family when I was younger was centered around various media. Every week we would rent several movies at a nearby blockbuster and watch them together and I’d spend many a summer with my cousins trying to beat a new game. It’s only natural I grew up so fascinated with storytelling.
 		</p>
 		<p>
-			I’d spend many a sleepless hours lying in bed thinking about games. How and why they worked, what I was going to do next, mulling over what I liked or not and why. I wanted to play all of them, see all there was to see, have every new experience I could. 
+			I’d spend sleepless hours lying in bed thinking about games. How and why they worked, what I was going to do next, mulling over what I liked or not and why. I wanted to play all of them, see all there was to see, have every new experience I could. 
 		</p>
 		<p>
 			That time I spent with my mother playing Zelda was probably my most cherished memory. Looking back, its likely the reason I would inevitably gravitate towards game dev. I want to be able to create those experiences for other people, to share with them at least a little of something of what was so special to me.
