added bold to words and build links

--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
 
 
         <div class="project">
-            <a href="https://drive.google.com/drive/folders/1ofAeOkL-20U9iZ9-0_Zw-V2JP5xcfawR?usp=sharing">
+            <!--<a href="https://drive.google.com/drive/folders/1ofAeOkL-20U9iZ9-0_Zw-V2JP5xcfawR?usp=sharing">-->
                 <h1 class="project-name">From Zero</h1>
-            </a>
+            <!--</a> -->
             <div class="inline">
                 <!-- <div class="column"> -->
                 <div class="container">
@@ -148,7 +148,7 @@
                         </div>
 
                         <div id="zeroGame" class="tabcontent zero" style="display: block;">
-                            <h4>University Project | Unity</h4>
+                            <h4>University Project | Unity | <a class="hyperlink", href="https://pedrocs21.itch.io/from-zero">Build</a></h4>
                             <h4>Development time: 1 semester | Team size: 2 developers, 4 artists</h4>
                             <p>
                                 From Zero is a <strong>3d Dungeon Crawler</strong> with <strong>life-sim</strong> elements where you get to play through your own <strong>superhero origin</strong> story and juggle your commitments as a hero with your <strong>daily life</strong> as a foreign exchange student to a small American town. It was developed during the 4th semester at the UE/IADE Games and Apps development course in a “cross” semester with the help of the Global Design course who contributed to the art.
@@ -250,9 +250,9 @@
         <hr class="hr3">
 
         <div class="project">
-            <a href="https://drive.google.com/drive/folders/1ZJOos1KnENs3N5QxHt72V-kBEpd141-h?usp=sharing">
+            <!--<a href="https://drive.google.com/drive/folders/1ZJOos1KnENs3N5QxHt72V-kBEpd141-h?usp=sharing">-->
                 <h1 class="project-name">Neon Pulse</h1>
-            </a>
+            <!--</a> -->
             <div class="inline">
                 <!-- <div class="column"> -->
                 <div class="container">
@@ -317,7 +317,7 @@
                         </div>
 
                         <div id="neonGame" class="tabcontent neon" style="display: block;">
-                            <h4>University Project | Unity</h4>
+                            <h4>University Project | Unity | <!--<a class="hyperlink", href="https://pedrocs21.itch.io/fome-de-vencer">Build</a>--> </h4>
                             <h4>Development time: 1 semester | Team size: 2 developers</h4>
                             <p>
                                 Neon Pulse is a <strong>top-down 2d competitive multiplayer</strong> game. Developed during the first semester of the GAD course, Neon Pulse was the <strong>first game</strong> I ever worked on. My team member Raul Grell was already at the time a very skilled programmer (In Portugal, unlike Brazil, programming can be taught in high school as a part of the normal curriculum and Raul had also worked as a programmer for several years before applying to college) so I took over the <strong>documentation and design side</strong> of the project while he would focus more on the implementation, although there was, of course, some overlap.
@@ -370,9 +370,9 @@
 
 
         <div class="project">
-            <a href="https://pedrocs21.itch.io/fome-de-vencer">
+            <!--<a href="https://pedrocs21.itch.io/fome-de-vencer">-->
                 <h1 class="project-name">Fome de Vencer</h1>
-            </a>
+            <!--</a> -->
             <div class="inline">
                 <!-- <div class="column"> -->
                 <div class="container">
@@ -435,7 +435,7 @@
                         </div>
 
                         <div id="fomeGame" class="tabcontent fome" style="display: block;">
-                            <h4>GameJam Game | Unity | <a href="https://pedrocs21.itch.io/fome-de-vencer", color = blue>Build</a> </h4>
+                            <h4>GameJam Game | Unity | <a class="hyperlink", href="https://pedrocs21.itch.io/fome-de-vencer">Build</a> </h4>
                             <h4>Development time: 2 days | Team size: 3 developers, 1 artist </h4>
                             <p>
                                 Fome de Vencer is a <strong>top-down Racing</strong> game where you must <strong>deliver food</strong> to different places around the map within a <strong>time limit</strong>. It was developed during the <strong>Games for Good GameJam</strong> which is partnered with local charitable organizations who also provide the topics/themes for the games, which in our case was the Banco Alimentar who provide food for the needy. 
