--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div id="introWrapper">
             <!-- <img id="introImg" src="assets/img/pic.jpg" alt="Me!"> -->
             <h2>
-                My name is <span id="name">Thales Martins</span>, and I’m an aspiring <span id="name">game designer</span> focused on <span id="name">systemic</span> and <span id="name">quest</span> design.
+                My name is <span id="name">Thales Martins</span>, and I’m an aspiring <span id="name">game producer.</span>
             </h2>
             <h2>
                 Having finished college and cut my teeth making games from the ground up I’m looking for an opportunity to further develop my skills in a more specialized environment where I can learn directly from the people that helped craft the very experiences I
