--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </ion-item> -->
 
         <p>
-            The first game I ever beat was The Legend Of Zelda: Ocarina of Time. I was maybe 3 or 4 at the time, messing around with my mother’s N64, trying to figure out how I get from Kakariko village at the start of the game to Death Mountain which I had seen
+            The first game I ever beat was The Legend Of Zelda: Ocarina of Time. I was maybe 3 or 4 at the time, messing around with my mother’s N64, trying to figure out how I get from Kokiri Forest at the start of the game to Death Mountain which I had seen
             on a another save. Since I couldn’t read at the time, much less in English, I asked my mom for help translating what people were saying. We ended up playing through the entire game together from start to finish, me on the controller, her with
             a guide on hand, telling me how to get the Biggoron’s sword or trying to coach me through the forest dungeon which absolutely terrified little me with its ghosts and creepy ceiling hands.
         </p>
